--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
 version: '3'
 services:
-  react-frontend:
-    image: dieator-frontend-react
-    build: /frontend
-    stdin_open: true
+  frontend:
+    build: ./frontend
+    volumes:
+      - "./frontend:/app"
+      - "/app/node_modules"
     ports:
-      - "3000:3000"
-  nestjs-backend:
-    image: dieator-backend-nestjs
-    build: /backend
+      - "1500:3000"
+  backend:
+    build: ./backend
+    volumes:
+      - "./backend:/app"
+      - "/app/node_modules"
     ports:
       - "3001:3001"
     depends_on:
@@ -16,7 +19,7 @@ services:
   mongo:
     image: mongo
     ports:
-      - "27017:27017"
+      - "27018:27017"
     volumes:
       - mongo-data:/data/db
 volumes:
